Alignment fix

--- a/stylescss/layout.css
+++ b/stylescss/layout.css
@@ -20,7 +20,6 @@
     border-radius: 8px;
     width: 750px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    margin-right: 36%;
 }
 
 .mobile__navbar {
